--- a/RRPowerApp/MainWindow.xaml
+++ b/RRPowerApp/MainWindow.xaml
@@ -19,6 +19,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -51,7 +52,9 @@
         <Label Margin="5 5 5 5" Content="Select Customer CSV" Grid.Row="9" Grid.Column="0"/>
         <TextBox Margin="5 5 5 5" Grid.Row="9" Grid.Column="1" Text="{Binding CustomersCSV , UpdateSourceTrigger=PropertyChanged}" />
         <Button Margin="5 5 5 5" Content="Browse File" Grid.Row="9" Grid.Column="2" Command="{Binding SetFieldCommand}"  CommandParameter="CustomersCSV"/>
-        <Button Margin="5 5 5 5" Content="Run" Command="{Binding RunCommand}" Grid.Row="9" Grid.Column="2"/>
+        <Label Margin="5 5 5 5" Content="Enter DataWorld" Grid.Row="10" Grid.Column="0"/>
+        <TextBox Margin="5 5 5 5" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="1" Text="{Binding DataWorld, UpdateSourceTrigger=PropertyChanged }" />
+        <Button Margin="5 5 5 5" Content="Run" Command="{Binding RunCommand}" Grid.Row="11" Grid.Column="2"/>
 
 
 
