--- a/RRPowerApp/MainWindow.xaml
+++ b/RRPowerApp/MainWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RRPowerApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -54,9 +55,7 @@
         <Button Margin="5 5 5 5" Content="Browse File" Grid.Row="9" Grid.Column="2" Command="{Binding SetFieldCommand}"  CommandParameter="CustomersCSV"/>
         <Label Margin="5 5 5 5" Content="Enter DataWorld" Grid.Row="10" Grid.Column="0"/>
         <TextBox Margin="5 5 5 5" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="1" Text="{Binding DataWorld, UpdateSourceTrigger=PropertyChanged }" />
-        <Button Margin="5 5 5 5" Content="Run" Command="{Binding RunCommand}" Grid.Row="11" Grid.Column="2"/>
-
-
-
+        <Button Margin="5 5 5 5" Content="Run" Command="{Binding RunCommand}" Grid.Row="10" Grid.Column="2"/>
+        <TextBox Margin="5 5 5 5" Grid.Row="11" Grid.ColumnSpan="3" Grid.Column="0" MinHeight="120" Text="{Binding Status, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </Window>
