--- a/RRPowerApp/MainWindow.xaml
+++ b/RRPowerApp/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Controls:MetroWindow 
+        x:Class="MainWindow"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RRPowerApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -58,4 +60,4 @@
         <Button Margin="5 5 5 5" Content="Run" Command="{Binding RunCommand}" Grid.Row="10" Grid.Column="2"/>
         <TextBox Margin="5 5 5 5" Grid.Row="11" Grid.ColumnSpan="3" Grid.Column="0" MinHeight="120" Text="{Binding Status, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
